--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "main": "index.js",
   "version": "0.0.1",
   "scripts": {
-    "test": "snyk test && eslint --fix . && mocha"
+    "test": "eslint --fix . && mocha"
   },
   "eslintConfig": {
     "extends": "trails"
   },
   "dependencies": {
-    "lisa-plugin": "^0.0.11",
-    "snyk": "^1.19.1"
+    "lisa-plugin": "^0.0.12"
   },
   "devDependencies": {
+    "snyk": "^1.19.1",
     "eslint": "^3.10.2",
     "eslint-config-trails": "^1.2.0",
     "lisa-box": "^0.0.13",
