--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "extends": "trails"
   },
   "dependencies": {
-    "lisa-plugin": "^0.0.12"
+    "lisa-plugin": "0.0.12"
   },
   "devDependencies": {
     "snyk": "^1.19.1",
