--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "lisa-plugin-sony-vpl",
+  "name": "lisa-plugin-voice",
   "main": "index.js",
   "version": "0.0.1",
   "scripts": {
     "test": "eslint --fix . && mocha"
   },
   "eslintConfig": {
-    "extends": "trails",
-    "rules": {
-      "no-control-regex": "off"
-    }
+    "extends": "trails"
   },
   "dependencies": {
-    "lisa-plugin": "^0.0.15",
-    "sony-sdcp-com": "^0.0.2"
+    "lisa-plugin": "^0.0.15"
   },
   "devDependencies": {
     "eslint": "^4.0.0",
     "eslint-config-trails": "^3.0.0",
-    "lisa-box": "^0.0.20",
-    "lodash": "^4.17.4",
-    "mocha": "^3.4.2",
-    "smokesignals": "^3.0.3",
-    "snyk": "^1.34.4",
-    "trails": "^2.0.2"
+    "mocha": "^3.4.2"
   }
 }
