--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "lisa-plugin-voice",
   "main": "index.js",
   "version": "0.0.1",
@@ -6,15 +7,15 @@
     "test": "eslint --fix . && mocha"
   },
   "eslintConfig": {
-    "extends": "trails"
+    "extends": "google"
   },
   "dependencies": {
-    "lisa-discovery": "^1.0.1",
-    "lisa-plugin": "^0.0.15"
+    "lisa-discovery": "^1.0.4",
+    "lisa-plugin": "^0.1.2"
   },
   "devDependencies": {
-    "eslint": "^6.4.0",
-    "eslint-config-trails": "^3.1.0",
-    "mocha": "^6.2.0"
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "mocha": "^9.1.1"
   }
 }
